@@ -21,6 +21,10 @@ IN DEVELOPMENT
 
    * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)
 
+   * ``uncommit`` works even when the commit messages of revisions to be
+     removed use characters not supported in the terminal encoding.
+     (Aaron Bentley)
+
   INTERNALS:
 
   API BREAKS:
